ocp/dc-dv-king-app.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: dv-king-app
  namespace: king-poc
  selfLink: /oapi/v1/namespaces/king-poc/deploymentconfigs/dv-king-app
  uid: 576bd62e-d36a-11e7-892c-001dd8b71e9a
  resourceVersion: '71356036'
  generation: 1
  creationTimestamp: '2017-11-27T11:58:54Z'
  labels:
    app: datavirt63-extensions-support-s2i
    application: dv-king-app
    template: datavirt63-extensions-support-s2i
    xpaas: 1.4.0
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - dv-king-app
        from:
          kind: ImageStreamTag
          namespace: king-poc
          name: 'dv-king-app:latest'
    - type: ConfigChange
  replicas: 1
  test: false
  selector:
    deploymentConfig: dv-king-app
  template:
    metadata:
      name: dv-king-app
      creationTimestamp: null
      labels:
        application: dv-king-app
        deploymentConfig: dv-king-app
    spec:
      volumes:
        - name: configuration
          secret:
            secretName: dv-king-app-config
            defaultMode: 420
        - name: datavirt-keystore-volume
          secret:
            secretName: dv-king-app-secret
            defaultMode: 420
        - name: datavirt-jgroups-keystore-volume
          secret:
            secretName: dv-king-app-secret
            defaultMode: 420
      containers:
        - name: dv-king-app
          image: dv-king-app
          ports:
            - name: jolokia
              containerPort: 8778
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: jdbc
              containerPort: 31000
              protocol: TCP
            - name: jdbcs
              containerPort: 31443
              protocol: TCP
            - name: ping
              containerPort: 8888
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: configuration
              readOnly: true
              mountPath: /etc/datavirt-environment
            - name: datavirt-keystore-volume
              readOnly: true
              mountPath: /etc/datavirt-secret-volume
            - name: datavirt-jgroups-keystore-volume
              readOnly: true
              mountPath: /etc/jgroups-encrypt-secret-volume
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - '-c'
                - /opt/eap/bin/livenessProbe.sh
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - '-c'
                - /opt/eap/bin/readinessProbe.sh
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      serviceAccountName: datavirt-service-account
      serviceAccount: datavirt-service-account
      securityContext: {}
status:
  latestVersion: 0
  observedGeneration: 1
  replicas: 0
  updatedReplicas: 0
  availableReplicas: 0
  unavailableReplicas: 0
  conditions:
    - type: Available
      status: 'False'
      lastUpdateTime: '2017-11-27T11:58:54Z'
      lastTransitionTime: '2017-11-27T11:58:54Z'
      message: Deployment config does not have minimum availability.
